fix sonar warnings, added sonar properties file